nginx-react/nginx-ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node-con-label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32000
